compiler/driver/tests/snapshots/diagnostics_snapshots__diag_ffi_export_inst_typecheck.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E034]: export fn `id` is generic; add at least one `export inst id<...>` for the FFI boundary
  --> ffi.ny:1:1
   |
  1 | export fn id<T>(x: T) -> T { return x }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: generic export templates are not linkable until monomorphized with `export inst`
